fixed cursor off center bug

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 .cursor-follower {
     width: 40px;
     height: 40px;
-    border: 2px solid var(--pure-black);
+    border: 1px solid var(--pure-black);
     border-radius: 50%;
     position: fixed;
     pointer-events: none;
@@ -24,6 +24,8 @@
     opacity: 0;
     left: 0;
     top: 0;
+    transform: translate(-50%, -50%); /* CENTER THE CURSOR */
+
 }
 
 .cursor-follower.active {
